tried fixed bug with z-index on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
     width: 100%;
     height: 100%;
     background-size: contain;
-    z-index: -2;
+    z-index: -100;
     background-color: white;
 }
 
